--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
 .App {
   text-align: center;
+  background-color:#ebf0f3;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.jobAdvertCard{
+  width: 95% !important;
+  margin-top: 1em;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.p1em{
+  padding-bottom: 1em !important; 
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.w100{
+  width: auto!important;
 }
-
-.App-link {
-  color: #61dafb;
+.mt1em{
+  margin-top: 1em !important;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mr0{
+  margin-right: 0 !important;
+}
+.mt1bem{
+  margin-top: 1.5em !important;
+  padding: 0;
 }
